css/style.css
/* ... */
.service p {
  -webkit-transition: var(--transition);
  transition: var(--transition);
}

.service:hover {
  background-color: var(--clr-primary-5);
  color: var(--clr-white);
}

.service:hover p {
  color: var(--clr-white);
}

.service:hover .underline {
  background-color: var(--clr-white);
}

@media screen and (min-width: 765px) {
  .services-center {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-column-gap: 1rem;
  }
}

@media screen and (min-width: 992px) {
  .services-center {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-column-gap: 1rem;
  }
}

/*
=============== 
Projects
===============
*/

.project-text {
  width: 85vw;
  max-width: 30rem;
  margin: 0 auto;
  text-align: center;
  margin-bottom: 3rem;
}

.project {
  position: relative;
  background-color: var(--clr-primary-5);
  margin-bottom: 2rem;
  border-radius: var(--radius);
  z-index: -2;
}

.project-info {
  text-align: center;
  color: var(--clr-white);
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  -webkit-transition: var(--transition);
  transition: var(--transition);
  opacity: 0;
}

.project-info p {
  text-transform: capitalize;
  color: var(--clr-white);
}

.project:hover .project-info {
  opacity: 1;
}

.project-img {
  height: 17rem;
  -o-object-fit: cover;
  object-fit: cover;
  border-radius: var(--radius);
  -webkit-transition: var(--transition);
  transition: var(--transition);
}

.project:hover .project-img {
  opacity: 0.3;
}

.project::after {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border: 0.25rem solid var(--clr-white);
  border-radius: var(--radius);
  -webkit-transition: var(--transition);
  transition: var(--transition);
  opacity: 0;
}

.project:hover::after {
  opacity: 1;
  -webkit-transform: scale(0.8);
  transform: scale(0.8);
}

@media screen and (min-width: 765px) {
  .projects-center {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-column-gap: 1rem;
  }
}

@media screen and (min-width: 992px) {
  .projects-center {
    grid-template-columns: repeat(3, 1fr);
  }
}

@media screen and (min-width: 1170px) {
  .projects-center {
    grid-template-rows: 200px 200px;
    grid-template-areas:
      "a b b"
      "a c d";
    row-gap: 1rem;
  }

  .project-img {
    height: 100%;
  }

  .project {
    height: 100%;
  }

  .project-1 {
    grid-area: a;
  }

  .project-2 {
    grid-area: b;
  }

  .project-3 {
    grid-area: c;
  }

  .project-4 {
    grid-area: d;
  }
}

/*
=============== 
Connect
===============
*/

.connect {
  min-height: 50vh;
  padding: 10rem 0 5rem 0;
  margin-top: 5rem 0;
  position: relative;
  z-index: -2;
}

.video-container {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  -o-object-fit: cover;
  object-fit: cover;
  z-index: -2;
}

.connect::after {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: var(--clr-white);
  opacity: 0.5;
  z-index: -1;
}

.connect {
  display: grid;
  place-items: center;
}

.video-banner .section-title {
  margin-bottom: 2rem;
}

.video-banner {
  background-color: var(--clr-primary-10);
  padding: 3rem 5rem 12rem 5rem;
  text-align: center;
  -webkit-clip-path: polygon(
    0% 0%,
    100% 0%,
    100% 75%,
    75% 75%,
    75% 100%,
    50% 75%,
    0% 75%
  );
  clip-path: polygon(
    0% 0%,
    100% 0%,
    100% 75%,
    75% 75%,
    75% 100%,
    50% 75%,
    0% 75%
  );
}

.video-text {
  max-width: 30rem;
}

.connect {
  -webkit-clip-path: polygon(48% 0, 100% 11%, 100% 90%, 53% 100%, 0 91%, 0 11%);
  clip-path: polygon(48% 0, 100% 11%, 100% 90%, 53% 100%, 0 91%, 0 11%);
}

/*
=============== 
Skills
===============
*/
.skills {
  background-color: var(--clr-primary-10);
  margin-top: 5rem;
}

.skills h3 {
  color: var(--clr-primary-1);
  margin: 2rem 0;
}

.skill {
  margin-bottom: 1rem;
}

.skill p {
  text-transform: capitalize;
  color: var(--clr-primary-1);
  margin-bottom: 1rem;
}

.skill-container {
  background-color: var(--clr-white);
  height: 1rem;
  width: 100%;
  position: relative;
  z-index: -2;
}

.skill-value {
  position: absolute;
  top: 0;
  left: 0;
  height: 1rem;
  width: 50%;
  background-color: var(--clr-primary-6);
  border-radius: var(--radius);
}

.skill-value-70 {
  width: 70%;
}

.skill-value-80 {
  width: 80%;
}

.skill-text {
  position: absolute;
  top: -2rem;
  left: 50%;
  -webkit-transform: translateX(-50%);
  transform: translateX(-50%);
}

.skill-70 {
  left: 70%;
  -webkit-transform: translateX(-70%);
  transform: translateX(-70%);
}

.skill-80 {
  left: 80%;
  -webkit-transform: translateX(-80%);
  transform: translateX(-80%);
}

@media screen and (min-width: 768px) {
  .skills-center {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    -webkit-column-gap: 1.5rem;
    -moz-column-gap: 1.5rem;
    column-gap: 1.5rem;
  }
}
/*
=============== 
Timeline
===============
*/
.timeline-center {
  width: 80vw;
  max-width: 40rem;
}

.timeline-item {
  border-top: 2px dashed var(--clr-primary-5);
  margin-bottom: 0;
  padding: 2rem 1.5rem;
  position: relative;
  z-index: -2;
}

.timeline-item p {
  margin: 0;
}

.timeline-item:nth-child(even) {
  border-left: 2px dashed var(--clr-primary-5);
  border-top-left-radius: 2rem;
  border-bottom-left-radius: 2rem;
  margin-right: 2rem;
  padding-right: 0;
}

.timeline-item:nth-child(odd) {
  border-right: 2px dashed var(--clr-primary-5);
  border-top-right-radius: 2rem;
  border-bottom-right-radius: 2rem;
  margin-left: 2rem;
  padding-left: 0;
}

.timeline-item:first-child {
  border-top: 0;
  border-top-right-radius: 0;
}

.timeline-item:last-child {
  border-bottom: 0;
  border-bottom-left-radius: 0;
}
/* ... */

